UHF-3091: fixes for chat overlapping on mobile

--- a/assets/css/smartti_chat.css
+++ b/assets/css/smartti_chat.css
@@ -5,8 +5,8 @@
 }
 
 /* Prevents the chatbot and Genesys chat from going on top of each other on mobile. */
-@media only screen and (max-width: 575px) {
+@media only screen and (max-width: 640px) {
   #smartti-wrapper {
-    margin-bottom: 20%;
+    margin-bottom: 82px;
   }
 }
